--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,17 +1,19 @@
 <div class="container-fluid">
     <div class="row" > 
       <div>
-       
-        <h4  id="success-Info" class="m-2 p-2 w-25"role="alert"></h4><br>
-        <h4  id="total"  class=" m-2 p-2 w-25"></h4> 
-        <h4  id="discount-total"  class=" m-2 p-2 w-25"></h4> 
+       <h3>Summary</h3>
+        <h6  id="success-Info" class="m-2 p-2 w-25"role="alert">Prodcuts €{{singleDishPrice().toFixed(2) }}</h6><br>
+        <h6  id="total"  class=" m-2 p-2 w-25">Service €{{service().toFixed(2) }}</h6> 
+        <!-- <h6  id="discount-total"  class=" m-2 p-2 w-25">Discount €{{discount().toFixed(2) }}</h6>  -->
+        <h3  id="discount-total"  class=" m-2 p-2 w-25">Total €{{total().toFixed(2) }}</h3> 
+        
        </div>
      
         <div >
-         <h1 class="bg-light p-2">Cart </h1>
+         <h1 class="bg-light p-2 card-header">Cart </h1>
         </div>
   <hr>  
-<div class="card-container row row-cols-1 row-cols-md-3 g-3" *ngFor="let dish of dishes">
+<div class="card-container row row-cols-1 row-cols-md-4 g-3" *ngFor="let dish of dishes">
     <div class="col">
         <!-- Card with default left text alignment -->
         <div class="card">
@@ -38,8 +40,12 @@
              
             </div>
         </div>
-    </div>
+        
 </div>
+    <!-- Card with center text alignment -->
+   
+</div>
+
 <hr>
         
 
@@ -50,23 +56,7 @@
      
   
           
-           
-           
-    
-           
-          
-
-
-
-          
-           
-          
-          
-         
-   
-
-      
-     <div class="container-fluid">
+<div class="container-fluid">
         <div class="row">
             <h1 class="order-form">Order Form</h1>
             <p>please fill up the info for the delivery</p>
