--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -4,7 +4,7 @@
        <h3>Summary</h3>
         <h6  id="success-Info" class="m-2 p-2 w-25"role="alert">Prodcuts €{{singleDishPrice().toFixed(2) }}</h6><br>
         <h6  id="total"  class=" m-2 p-2 w-25">Service €{{service().toFixed(2) }}</h6> 
-        <!-- <h6  id="discount-total"  class=" m-2 p-2 w-25">Discount €{{discount().toFixed(2) }}</h6>  -->
+        <h6  id="discount-total"  class=" m-2 p-2 w-25">Discount €{{discount().toFixed(2) }}</h6> 
         <h3  id="discount-total"  class=" m-2 p-2 w-25">Total €{{total().toFixed(2) }}</h3> 
         
        </div>
