--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,6 @@
   <router-outlet ></router-outlet>
 </div>
 <app-footer></app-footer>
+<div style="text-align:center">
+  <fa-icon [icon]="faCoffee"></fa-icon>
+</div>
